--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -3,15 +3,10 @@
   <%= link_to "New Appointment", new_appointment_path, class: "btn btn-primary" %>
 </div>
 
-<% if notice %>
-  <div class="alert alert-success"><%= notice %></div>
-<% end %>
-
 <table class="table table-striped table-bordered">
   <thead class="table-light">
     <tr>
       <th>Patient</th>
-      <th>Phone</th>
       <th>Scheduled At</th>
       <th>Status</th>
       <th>Doctor</th>
@@ -21,8 +16,7 @@
   <tbody>
     <% @appointments.each do |appointment| %>
       <tr>
-        <td><%= appointment.patient_name %></td>
-        <td><%= appointment.patient_phone %></td>
+        <td><%= appointment.patient.name %></td>
         <td><%= appointment.scheduled_at.strftime("%d %b %Y %I:%M %p") %></td>
         <td>
           <span class="badge bg-secondary">
