Apply multiple fixes and updates: - AppointmentsController: added clinic_id to permitted params - Models: added 'alphabet' scope in Clinic and User models - Views: added navigation for users - Migrations: fixed issues in add_doctor_to_appointments migration - Seeds: added initial seed data - Dependencies: updated package.json and yarn.lock for new dependencies - README: updated instructions and added CSS load info

--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -31,6 +31,16 @@
   </div>
 
   <div class="mb-3">
+    <%= form.label :clinic_id, "Clinic", class: "form-label" %>
+    <%= form.collection_select :clinic_id,
+          Clinic.alphabetical,
+          :id,
+          :name,
+          { prompt: "Select Clinic" },
+          class: "form-select" %>
+  </div>
+  
+  <div class="mb-3">
     <%= form.label :scheduled_at, class: "form-label" %>
     <%= form.datetime_local_field :scheduled_at, class: "form-control" %>
   </div>
