--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,30 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">MyApp</a>
+
+        <div class="collapse navbar-collapse">
+          <!-- Left side links -->
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <%= link_to "Home", root_path, class: "nav-link" %>
+            </li>
+          </ul>
+              
+          <!-- Right side link/button -->
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <span class="nav-link "><%= current_user.email %></span>
+            </li>
+            <li class="nav-item">
+              <%= button_to "Logout", logout_path, method: :delete, class: "nav-link" %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <% if notice.present? %>
       <p class="alert alert-success"><%= notice %></p>
     <% end %>
